--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -38,7 +38,7 @@ b{
 }
 
 #resume-left-col{
-    background-color: #f2f2f2;
+    background-color: #f2f2f2 !important;
 }
 
 .resume-row{
@@ -174,4 +174,8 @@ p{
 
 #hello_text{
     padding-bottom: 10px;
+}
+
+.ul-no-style{
+    list-style-type: none;
 }
